regression/fail/5.sml
fun 'b f (x : 'b) =
   let datatype foo = Foo of 'b * int
   in 13
   end
